packages/tree-sitter-mirin/grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $.function_definition,
        $.struct_definition,
        $.port_definition,
        $.trait_definition,
        $.impl_block,
        $.module_definition,
        $.use_declaration,
      ),

    // `use` imports. Paths are 2018-style relative; `crate`/`super`/`self`
    // anchors are ordinary identifier segments recognised by the resolver.
    //   use a::b::c;   use a::b as d;   use a::{b, c::{d, e}};   use a::*;
    use_declaration: ($) =>
      seq(
        optional(field("visibility", $.visibility_modifier)),
        "use",
        field("tree", $.use_tree),
        ";",
      ),

    use_tree: ($) =>
      choice(
        seq($.use_path, optional(seq("as", field("alias", $.identifier)))),
        seq(optional(seq($.use_path, "::")), field("group", $.use_group)),
        seq(optional(seq($.use_path, "::")), field("glob", "*")),
      ),

    use_path: ($) => seq($.identifier, repeat(seq("::", $.identifier))),

    use_group: ($) => seq("{", commaSep($.use_tree), optional(","), "}"),

    // Item visibility. Default (absent) is private. The parenthesised forms
    // narrow a public item's reach.
    //   pub   pub(crate)   pub(super)   pub(in a::b)
    visibility_modifier: ($) =>
      seq(
        "pub",
        optional(
          seq("(", choice("crate", "super", seq("in", $.use_path)), ")"),
        ),
      ),

    // Module declaration. `mod foo { items… }` nests an inline body (modules
    // nest arbitrarily); `mod foo;` loads the body from `foo.mrn` at load time.
    module_definition: ($) =>
      seq(
        optional(field("visibility", $.visibility_modifier)),
        "mod",
        field("name", $.identifier),
        choice(field("body", $.module_body), ";"),
      ),

    module_body: ($) => seq("{", repeat($._item), "}"),

    // The constructor name (`= ctor`) is mandatory. A struct/port introduces
    // *two* names — the type and its constructor — and they share one namespace,
    // so they must differ (`struct S = S { … }` is a duplicate-name error,
    // diagnosed by name resolution). Requiring `= ctor` keeps the type/term
    // split explicit at the syntax level. See `planning/syntax.md`.
    struct_definition: ($) =>
      seq(
        optional(field("visibility", $.visibility_modifier)),
        "struct",
        field("name", $.identifier),
        optional(field("parameters", $.parameter_section)),
        "=",
        field("constructor", $.identifier),
        field("body", $.record_type_body),
      ),

    impl_block: ($) =>
      seq(
        "impl",
        optional(field("named_parameters", $.named_parameter_section)),
        field("name", $.return_type_expression),
        optional(seq("for", field("self_type", $.return_type_expression))),
        optional(field("where", $.where_clause)),
        field("body", $.impl_body),
      ),

    impl_body: ($) =>
      seq("{", repeat(choice($.function_definition, $.impl_const)), "}"),

    // An associated const's value in an impl. The value is a const
    // expression; semantics land with associated consts (planning/traits.md
    // T4) — the grammar carries them from the start.
    function_definition: ($) =>
      seq(
        optional(field("visibility", $.visibility_modifier)),
        "fn",
        field("name", $.identifier),
        optional(field("named_parameters", $.named_parameter_section)),
        field("parameters", $.parameter_section),
        optional(
          seq(
            "->",
            field(
              "return_type",
              choice($.return_type_expression, $.tuple_type, $.named_return),
            ),
          ),
        ),
        optional(field("where", $.where_clause)),
        choice(
          field("body", $.block),
          seq("=", "verilog", field("verilog_body", $.verilog_block)),
        ),
      ),

    // An inline-verilog fn body: the signature is the contract, the raw
    // text is spliced into the emitted module (`planning/inline_verilog.md`).
    verilog_block: ($) => seq("{", field("content", $.verilog_content), "}"),

    // Return-position type. Excludes `type_named_args` because a trailing
    // `{` in return position opens the fn body, not a named-arg-application.
    // Use parentheses to write a parametric return type (`-> DF(uint(8))`)
    // and call sites supply the named bindings positionally elsewhere.
    return_type_expression: ($) =>
      prec.right(
        seq(
          field("name", $.identifier),
          optional($.type_index),
          optional(seq("@", field("domain", $.identifier))),
        ),
      ),

    // Named result(s): `-> (output: DF @clk)` names the whole result;
    // `-> (sum: uint(8), carry: bool)` names the parts of a tuple result. The
    // names become referrable result places in the body (the `return` keyword
    // doesn't exist when results are named). A single element is the result
    // type itself; two or more form a tuple (planning/return_variable.md). The
    // `:` distinguishes this from a bare tuple_type return `(A, B)`.
    named_return: ($) =>
      seq("(", commaSep1($.named_result), optional(","), ")"),

    named_result: ($) =>
      seq(field("name", $.identifier), ":", field("type", $._type)),

    named_parameter_section: ($) => seq("{", commaSep($.named_parameter), optional(","), "}"),

    parameter_section: ($) => seq("(", commaSep($.parameter), optional(","), ")"),

    named_parameter: ($) =>
      prec(
        1,
        seq(
          optional(field("direction", choice("in", "out"))),
          optional(field("kind", choice("param", "dom"))),
          field("name", $.identifier),
          optional(
            seq(
              ":",
              field("type", $._type),
              repeat(seq("+", field("bound", $.trait_bound))),
            ),
          ),
          optional(seq("=", field("default", $.expression))),
        ),
      ),

    parameter: ($) =>
      choice(
        seq(
          field("name", "self"),
          optional(seq("@", field("domain", $.identifier))),
        ),
        seq(
          optional(field("direction", choice("in", "out"))),
          optional(field("kind", choice("param", "dom"))),
          field("name", $.identifier),
          ":",
          field("type", $._type),
          repeat(seq("+", field("bound", $.trait_bound))),
          optional(seq("=", field("default", $.expression))),
        ),
      ),

    record_type_body: ($) =>
      seq("{", commaSep($.record_field_type), optional(","), "}"),

    record_field_type: ($) =>
      seq(field("name", $.identifier), ":", field("type", $._type)),

    block: ($) =>
      seq("{", repeat($.statement), optional(field("tail", $.expression)), "}"),

    statement: ($) =>
      choice(
        $.let_statement,
        $.for_statement,
        $.return_statement,
        $.var_statement,
        $.assignment_statement,
        $.expression_statement,
      ),

    // `for x in v { … }` / `for (i, x) in v.enumerate() { … }` — structural
    // replication over a vector, emitted as a NAMED SV generate-for
    // (planning/for_loops.md). The binder is a pattern (planning/tuples.md);
    // the iterable uses the same restricted forms as if-conditions (a
    // trailing `{` opens the body).
    let_statement: ($) =>
      seq(
        "let",
        field("pattern", $._pattern),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $.expression),
        ";",
      ),

    // `(a, b)` / `(a, (b, c))` in binder position — destructuring
    // (planning/tuples.md). Identifiers only; lowering desugars patterns to
    // field projections, so there is no pattern IR. Arity ≥ 2.
    _pattern: ($) => choice($.identifier, $.tuple_pattern, $.struct_pattern),

    return_statement: ($) => seq("return", field("value", $.expression), ";"),

    var_statement: ($) =>
      seq(
        "var",
        commaSep1(field("name", $.identifier)),
        optional(seq(":", field("type", $._type))),
        optional(seq("=", field("value", $.expression))),
        ";",
      ),

    assignment_statement: ($) =>
      seq(field("left", $.expression), "=", field("right", $.expression), ";"),

    type_expression: ($) =>
      prec.right(
        seq(
          field("name", $.identifier),
          optional($.type_named_args),
          optional($.type_index),
          optional(seq("@", field("domain", $.identifier))),
        ),
      ),

    // Named-section type arguments — supply the def's named-section
    // generic params (typically `dom clk: Clock`). Example: `DF{clk}` binds
    // the port's `dom clk` to the local `clk`. The contents are
    // type arguments in declared order, just like the positional `(…)`
    // section, but applied to the def's named params.
    type_named_args: ($) => seq("{", commaSep1($.type_argument), "}"),

    // Parenthesised list of type arguments after a type name:
    //   uint(8)          — width literal (Number)
    //   uint(N)          — width as a `param N: integer` identifier (TypeExpression)
    //   uint(N + 1)      — width arithmetic (ConstExpression)
    //   uint(cfg.bits)   — const field projection (ConstExpression)
    //   Bus(uint(8))     — type argument (TypeExpression)
    //   Bus(A)           — type-kinded parameter reference (TypeExpression)
    type_index: ($) => seq("(", commaSep1($.type_argument), ")"),

    type_argument: ($) =>
      choice($.type_expression, $.tuple_type, $.number, $.const_expression),

    // Any type form: a named type or a tuple (planning/tuples.md).
    _type: ($) => choice($.type_expression, $.tuple_type),

    // `(A, B)` — a structural product type; each element may carry its own
    // domain, and a trailing `@clk` is the default for elements without one
    // (planning/tuples.md). Arity ≥ 2.
    tuple_type: ($) =>
      seq(
        "(",
        $._type,
        ",",
        commaSep1($._type),
        optional(","),
        ")",
        optional(seq("@", field("domain", $.identifier))),
      ),

    // The restricted const grammar in type positions: arithmetic over
    // literals, names, and field projections. Anything bigger (a call, an
    // if/else) goes through a `let`: `let w = f(n); uint(w)`. A *bare* name
    // stays a type_expression (the lowerer decides type vs const by kind).
    const_expression: ($) =>
      choice($.const_binary, $.const_field, $.const_path, $.const_paren),

    // `T::width` — an associated const projected from a bounded type param
    // (planning/traits.md T4).
    const_field: ($) =>
      seq(
        field("base", $.identifier),
        repeat1(seq(".", field("field", $.identifier))),
      ),

    const_binary: ($) =>
      choice(
        prec.left(
          PREC.multiplicative,
          seq(
            field("left", $._const_operand),
            field("operator", "*"),
            field("right", $._const_operand),
          ),
        ),
        prec.left(
          PREC.additive,
          seq(
            field("left", $._const_operand),
            field("operator", choice("+", "-")),
            field("right", $._const_operand),
          ),
        ),
      ),

    _const_operand: ($) =>
      choice($.number, $.identifier, $.const_field, $.const_binary, $.const_paren),

    expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.typed_literal,
        $.vec_literal,
        $.postfix_expression,
        $.record_constructor_expression,
        $.path_expression,
        $.return_expression,
        $.number,
        $.parenthesized_expression,
        $.tuple_expression,
        $.block,
        $.if_expression,
        $.when_expression,
      ),

    // Rust-style `if cond { … } else { … }`. Both branches are required;
    // Mirin has no statement-form `if`. The two branches must produce the
    // same type, which is the if-expression's type. The condition uses
    // `_expression_no_struct` so that `if Foo { x: 1 } { … }` doesn't
    // parse `Foo { x: 1 }` as a record-constructor (Rust does the same).
    binary_expression: ($) =>
      choice(
        prec.left(
          PREC.logical_or,
          seq(
            field("left", $.expression),
            field("operator", "||"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.logical_and,
          seq(
            field("left", $.expression),
            field("operator", "&&"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.comparison,
          seq(
            field("left", $.expression),
            field("operator", choice("==", "!=", "<", "<=", ">", ">=")),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.multiplicative,
          seq(field("left", $.expression), field("operator", "*"), field("right", $.expression)),
        ),
        prec.left(
          PREC.additive,
          seq(
            field("left", $.expression),
            field("operator", choice("+", "-")),
            field("right", $.expression),
          ),
        ),
      ),

    postfix_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(
          field(
            "receiver",
            choice(
            $.path_expression,
            $.return_expression,
            $.number,
            $.parenthesized_expression,
            $.tuple_expression,
          ),
          ),
          repeat1(
            choice(
              $.field_access,
              $.index_access,
              seq($.named_argument_list, $.argument_list),
              $.argument_list,
            ),
          ),
        ),
      ),

    // `.f` named projection, `.0` tuple projection (planning/tuples.md) —
    // numbers never contain dots, so `x.0.1` lexes cleanly.
    field_access: ($) =>
      seq(".", field("field", choice($.identifier, $.number))),

    // `v[i]` — single-element indexing (planning/vectors.md).
    argument_list: ($) =>
      seq(
        "(",
        commaSep(choice($.expression, $.out_argument)),
        optional(","),
        ")",
      ),

    // Positional out-arg: `[out] => target`. Binds a caller-side local to
    // an `out`-direction positional parameter on the callee. The `out`
    // keyword is optional — `=>` unambiguously means source-arrow.
    record_constructor_expression: ($) =>
      seq(field("constructor", $.identifier), field("body", $.record_literal)),

    record_literal: ($) => seq("{", commaSep($.record_field_value), optional(","), "}"),

    // `name = value` supplies a field; `name => target` binds an
    // opposite-direction field of a constructed *port* to a local (the
    // record-literal analogue of a named-arg out-connection). `=` matches
    // named parameters/arguments — `:` always means "type", `=`/`=>`
    // always mean "value/connection".
    record_field_value: ($) =>
      choice(
        seq(field("name", $.identifier), "=", field("value", $.expression)),
        seq(field("name", $.identifier), "=>", field("target", $.identifier)),
      ),

    // A name reference: `a`, `a::b::c`, `crate::m::f`, `super::x`. 1+ segments
    // — a bare name is a single-segment path (there is no separate identifier
    // expression; the lowering decides bare-name vs path by segment count).
    // `crate`/`super`/`self` anchors are ordinary identifier segments handled
    // by the resolver.
    tuple_expression: ($) =>
      seq(
        "(",
        $.expression,
        ",",
        commaSep1($.expression),
        optional(","),
        ")",
      ),

    identifier: () => /[A-Za-z_][A-Za-z0-9_]*/,
    // Decimal / 0x hex / 0b binary, `_` separators after the first char
    // (planning/numeric_literals.md L1). Width never rides the literal.
