packages/tree-sitter-mirin/test/corpus/declarations.txt
========================================
function with named and positional args
========================================

fn multAdd
  { dom clk: Clock, rstn: Reset @clk = high, c: uint(8) @clk = 0, }
  ( a: uint(8) @clk, b: uint(8) @clk )
  -> uint(8) @clk
  {
    let mult = a * b;
    let mult = mult.reg(rstn, 0);
    let add = mult + c;
    return add;
  }

---

(source_file
  (function_definition
    name: (identifier)
    named_parameters: (named_parameter_section
      (named_parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)))
      (named_parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          domain: (identifier))
        default: (expression
          (path_expression
            segment: (identifier))))
      (named_parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number)))
          domain: (identifier))
        default: (expression
          (number))))
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number)))
          domain: (identifier)))
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number)))
          domain: (identifier))))
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number)))
      domain: (identifier))
    body: (block
      (statement
        (let_statement
          pattern: (identifier)
          value: (expression
            (binary_expression
              left: (expression
                (path_expression
                  segment: (identifier)))
              right: (expression
                (path_expression
                  segment: (identifier)))))))
      (statement
        (let_statement
          pattern: (identifier)
          value: (expression
            (postfix_expression
              receiver: (path_expression
                segment: (identifier))
              (field_access
                field: (identifier))
              (argument_list
                (expression
                  (path_expression
                    segment: (identifier)))
                (expression
                  (number)))))))
      (statement
        (let_statement
          pattern: (identifier)
          value: (expression
            (binary_expression
              left: (expression
                (path_expression
                  segment: (identifier)))
              right: (expression
                (path_expression
                  segment: (identifier)))))))
      (statement
        (return_statement
          value: (expression
            (path_expression
              segment: (identifier))))))))

========================================
var with combined initializer
========================================

fn f() {
  var count: uint(8) = count + 1;
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section)
    body: (block
      (statement
        (var_statement
          name: (identifier)
          type: (type_expression
            name: (identifier)
            (type_index
              (type_argument
                (number))))
          value: (expression
            (binary_expression
              left: (expression
                (path_expression
                  segment: (identifier)))
              right: (expression
                (number)))))))))

========================================
impl block with self parameter
========================================

impl Reg {
  fn reg{dom clk: Clock}(self @clk, rst: Reset @clk, reset_val: uint(8)) -> uint(8) @clk {
  }
}

---

(source_file
  (impl_block
    name: (return_type_expression
      name: (identifier))
    body: (impl_body
      (function_definition
        name: (identifier)
        named_parameters: (named_parameter_section
          (named_parameter
            name: (identifier)
            type: (type_expression
              name: (identifier))))
        parameters: (parameter_section
          (parameter
            domain: (identifier))
          (parameter
            name: (identifier)
            type: (type_expression
              name: (identifier)
              domain: (identifier)))
          (parameter
            name: (identifier)
            type: (type_expression
              name: (identifier)
              (type_index
                (type_argument
                  (number))))))
        return_type: (return_type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number)))
          domain: (identifier))
        body: (block)))))

========================================
applied inherent impl on a generic owner
========================================

impl {dom clk: Clock, type A} Bus(A) {
  fn first(self @clk) -> bool @clk {
  }
}

---

(source_file
  (impl_block
    named_parameters: (named_parameter_section
      (named_parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)))
      (named_parameter
        name: (identifier)))
    name: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (type_expression
            name: (identifier)))))
    body: (impl_body
      (function_definition
        name: (identifier)
        parameters: (parameter_section
          (parameter
            domain: (identifier)))
        return_type: (return_type_expression
          name: (identifier)
          domain: (identifier))
        body: (block)))))

========================================
inline module with nested items
========================================

mod math {
  fn add(a: uint(8)) { let r = a; }
  mod inner {
    struct Packet = packet { valid: bool }
  }
}

---

(source_file
  (module_definition
    name: (identifier)
    body: (module_body
      (function_definition
        name: (identifier)
        parameters: (parameter_section
          (parameter
            name: (identifier)
            type: (type_expression
              name: (identifier)
              (type_index
                (type_argument
                  (number))))))
        body: (block
          (statement
            (let_statement
              pattern: (identifier)
              value: (expression
                (path_expression
                  segment: (identifier)))))))
      (module_definition
        name: (identifier)
        body: (module_body
          (struct_definition
            name: (identifier)
            constructor: (identifier)
            body: (record_type_body
              (record_field_type
                name: (identifier)
                type: (type_expression
                  name: (identifier))))))))))

========================================
file-based module declaration
========================================

mod util;

mod math {
  fn f(a: uint(8)) { let r = a; }
}

---

(source_file
  (module_definition
    name: (identifier))
  (module_definition
    name: (identifier)
    body: (module_body
      (function_definition
        name: (identifier)
        parameters: (parameter_section
          (parameter
            name: (identifier)
            type: (type_expression
              name: (identifier)
              (type_index
                (type_argument
                  (number))))))
        body: (block
          (statement
            (let_statement
              pattern: (identifier)
              value: (expression
                (path_expression
                  segment: (identifier))))))))))

========================================
use declarations
========================================

use crate::a::b;
use a::{b, c::d};
use a::* ;
use a::b as c;

---

(source_file
  (use_declaration
    tree: (use_tree
      (use_path
        (identifier)
        (identifier)
        (identifier))))
  (use_declaration
    tree: (use_tree
      (use_path
        (identifier))
      group: (use_group
        (use_tree
          (use_path
            (identifier)))
        (use_tree
          (use_path
            (identifier)
            (identifier))))))
  (use_declaration
    tree: (use_tree
      (use_path
        (identifier))))
  (use_declaration
    tree: (use_tree
      (use_path
        (identifier)
        (identifier))
      alias: (identifier))))

========================================
multi-segment path expression
========================================

fn f() {
  let x = crate::m::g;
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section)
    body: (block
      (statement
        (let_statement
          pattern: (identifier)
          value: (expression
            (path_expression
              segment: (identifier)
              segment: (identifier)
              segment: (identifier))))))))

========================================
visibility modifiers
========================================

pub fn f(x: uint(8)) { let r = x; }
pub(crate) struct P = p { v: bool }
pub use crate::a::b;

---

(source_file
  (function_definition
    visibility: (visibility_modifier)
    name: (identifier)
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number))))))
    body: (block
      (statement
        (let_statement
          pattern: (identifier)
          value: (expression
            (path_expression
              segment: (identifier)))))))
  (struct_definition
    visibility: (visibility_modifier)
    name: (identifier)
    constructor: (identifier)
    body: (record_type_body
      (record_field_type
        name: (identifier)
        type: (type_expression
          name: (identifier)))))
  (use_declaration
    visibility: (visibility_modifier)
    tree: (use_tree
      (use_path
        (identifier)
        (identifier)
        (identifier)))))

========================================
let with type ascription
========================================

fn f {dom clk: Clock} (x: uint(8) @clk) {
  let y: uint(8) @clk = x;
  let z: bool = true;
}

---

(source_file
  (function_definition
    name: (identifier)
    named_parameters: (named_parameter_section
      (named_parameter
        name: (identifier)
        type: (type_expression
          name: (identifier))))
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number)))
          domain: (identifier))))
    body: (block
      (statement
        (let_statement
          pattern: (identifier)
          type: (type_expression
            name: (identifier)
            (type_index
              (type_argument
                (number)))
            domain: (identifier))
          value: (expression
            (path_expression
              segment: (identifier)))))
      (statement
        (let_statement
          pattern: (identifier)
          type: (type_expression
            name: (identifier))
          value: (expression
            (path_expression
              segment: (identifier))))))))

========================================
declaration-only let (no initialiser)
========================================

fn f(a: uint(8)) -> uint(8) {
  let bare;
  let count: uint(8);
  count = a;
  count
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number))))))
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number))))
    body: (block
      (statement
        (let_statement
          pattern: (identifier)))
      (statement
        (let_statement
          pattern: (identifier)
          type: (type_expression
            name: (identifier)
            (type_index
              (type_argument
                (number))))))
      (statement
        (assignment_statement
          left: (expression
            (path_expression
              segment: (identifier)))
          right: (expression
            (path_expression
              segment: (identifier)))))
      tail: (expression
        (path_expression
          segment: (identifier))))))

================================================================================
record constructor with = fields and => binding
================================================================================

fn top() -> uint(8) {
    let p = pair { a = 1, ready => r };
    p.a
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section)
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number))))
    body: (block
      (statement
        (let_statement
          pattern: (identifier)
          value: (expression
            (record_constructor_expression
              constructor: (identifier)
              body: (record_literal
                (record_field_value
                  name: (identifier)
                  value: (expression
                    (number)))
                (record_field_value
                  name: (identifier)
                  target: (identifier)))))))
      tail: (expression
        (postfix_expression
          receiver: (path_expression
            segment: (identifier))
          (field_access
            field: (identifier)))))))

================================================================================
const expressions in width position
================================================================================

fn top() -> uint(8) {
    let x: uint(n + 5) = 0;
    let y: uint(cfg.bits) = 0;
    x
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section)
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number))))
    body: (block
      (statement
        (let_statement
          pattern: (identifier)
          type: (type_expression
            name: (identifier)
            (type_index
              (type_argument
                (const_expression
                  (const_binary
                    left: (identifier)
                    right: (number))))))
          value: (expression
            (number))))
      (statement
        (let_statement
          pattern: (identifier)
          type: (type_expression
            name: (identifier)
            (type_index
              (type_argument
                (const_expression
                  (const_field
                    base: (identifier)
                    field: (identifier))))))
          value: (expression
            (number))))
      tail: (expression
        (path_expression
          segment: (identifier))))))

================================================================================
inline verilog fn body
================================================================================

fn ff {dom clk: Clock} (d: uint(8) @clk, out q: uint(8) @clk) = verilog {
    always_ff @(posedge ${clk}) ${q} <= $unsigned(${d}); // braces ok: }{
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    named_parameters: (named_parameter_section
      (named_parameter
        name: (identifier)
        type: (type_expression
          name: (identifier))))
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number)))
          domain: (identifier)))
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number)))
          domain: (identifier))))
    verilog_body: (verilog_block
      content: (verilog_content))))

================================================================================
inline verilog expression body
================================================================================

fn add(self, other: Self) -> Self = verilog expr { ${self} + ${other} }

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section
      (parameter)
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier))))
    return_type: (return_type_expression
      name: (identifier))
    verilog_body: (verilog_block
      content: (verilog_content))))

========================================
impl block with binder-first generics
========================================

impl {dom clk: Clock} Stream8 {
  fn connect(self @clk, out downstream: Stream8 @clk) {
  }
}

---

(source_file
  (impl_block
    named_parameters: (named_parameter_section
      (named_parameter
        name: (identifier)
        type: (type_expression
          name: (identifier))))
    name: (return_type_expression
      name: (identifier))
    body: (impl_body
      (function_definition
        name: (identifier)
        parameters: (parameter_section
          (parameter
            domain: (identifier))
          (parameter
            name: (identifier)
            type: (type_expression
              name: (identifier)
              domain: (identifier))))
        body: (block)))))

========================================
tuple types: ascription, nesting, domains, vec-of-tuple
========================================

fn g {dom a: Clock, dom b: Clock} (x: uint(8) @a, y: uint(4) @b, v: Vec(3, (bool, uint(2)))) -> (uint(8) @a, uint(4) @b) {
    let t: (uint(8) @a, uint(4) @b) = (x, y);
    let n: ((bool, bool), uint(4),) = ((true, true), y);
    t
}

---

(source_file
  (function_definition
    (identifier)
    (named_parameter_section
      (named_parameter
        (identifier)
        (type_expression
          (identifier)))
      (named_parameter
        (identifier)
        (type_expression
          (identifier))))
    (parameter_section
      (parameter
        (identifier)
        (type_expression
          (identifier)
          (type_index
            (type_argument
              (number)))
          (identifier)))
      (parameter
        (identifier)
        (type_expression
          (identifier)
          (type_index
            (type_argument
              (number)))
          (identifier)))
      (parameter
        (identifier)
        (type_expression
          (identifier)
          (type_index
            (type_argument
              (number))
            (type_argument
              (tuple_type
                (type_expression
                  (identifier))
                (type_expression
                  (identifier)
                  (type_index
                    (type_argument
                      (number))))))))))
    (tuple_type
      (type_expression
        (identifier)
        (type_index
          (type_argument
            (number)))
        (identifier))
      (type_expression
        (identifier)
        (type_index
          (type_argument
            (number)))
        (identifier)))
    (block
      (statement
        (let_statement
          (identifier)
          (tuple_type
            (type_expression
              (identifier)
              (type_index
                (type_argument
                  (number)))
              (identifier))
            (type_expression
              (identifier)
              (type_index
                (type_argument
                  (number)))
              (identifier)))
          (expression
            (tuple_expression
              (expression
                (path_expression
                  (identifier)))
              (expression
                (path_expression
                  (identifier)))))))
      (statement
        (let_statement
          (identifier)
          (tuple_type
            (tuple_type
              (type_expression
                (identifier))
              (type_expression
                (identifier)))
            (type_expression
              (identifier)
              (type_index
                (type_argument
                  (number)))))
          (expression
            (tuple_expression
              (expression
                (tuple_expression
                  (expression
                    (path_expression
                      (identifier)))
                  (expression
                    (path_expression
                      (identifier)))))
              (expression
                (path_expression
                  (identifier)))))))
      (expression
        (path_expression
          (identifier))))))

========================================
named results in the return signature
========================================

fn f(x: uint(8)) -> (sum: uint(8), carry: bool) {
    sum = x;
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number))))))
    return_type: (named_return
      (named_result
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number)))))
      (named_result
        name: (identifier)
        type: (type_expression
          name: (identifier))))
    body: (block
      (statement
        (assignment_statement
          left: (expression
            (path_expression
              segment: (identifier)))
          right: (expression
            (path_expression
              segment: (identifier))))))))

========================================
parenthesized return type (unnamed)
========================================

fn f(x: uint(8)) -> (DF{clk}(uint(8))) {
    x
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number))))))
    return_type: (parenthesized_return_type
      type: (type_expression
        name: (identifier)
        (type_named_args
          (type_argument
            (type_expression
              name: (identifier))))
        (type_index
          (type_argument
            (type_expression
              name: (identifier)
              (type_index
                (type_argument
                  (number))))))))
    body: (block
      tail: (expression
        (path_expression
          segment: (identifier))))))
